--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="#testimonials" id="features" class="hover:text-accentCyan">Testimonials</a>
 
         <!-- dark/light mode button -->
-        <button id="theme-toggle" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focusring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2 5">
+        <button id="theme-toggle" class="text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2 5">
             <!-- Dark SVG Icon -->
             <svg id="theme-toggle-dark-icon" class="w-5 h-5 hidden" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z"></path>
@@ -54,15 +54,22 @@
     </div>
    </header>
 
-
-
-
-
-
-
-
-
-
+   <!-- hero section -->
+   <section id="hero" class="bg-curvy-light-mode dark:bg-curvy-dark-mode bg-no-repeat bg-contain bg-bottom">
+    <!-- hero container -->
+    <div class="container mx-auto px-6 text-center md:pt-20 pb-52">
+        <img src="images/illustration-intro.png" alt="" class="mx-auto">
+        <h1 class="max-w-2xl mx-auto mb-10 text-3xl font-bold leading-normal mt-14 md:test-4xl">
+            Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+        </h1>
+        <p class="max-w-xs mx-auto mb-10 text-sm md:max-w-xl md:test-lg">
+            Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+        </p>
+        <button class="p-3 rounded-full w-52 bg-accentCyan hover:scale-95">
+            Get Started
+        </button>
+    </div>
+   </section>
 
    <script src="js/script.js" defer></script>
 </body>
