--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
 
-   
+    <script src="js/script.js" defer></script>
 </head>
+
 <body class="dark:bg-darkBlue dark:text-white font-opensans">
    <!-- header -->
    <header class="container mx-auto mt-10 px-6 text-center h-40 md:h-20">
@@ -71,6 +72,97 @@
     </div>
    </section>
 
-   <script src="js/script.js" defer></script>
+   <!-- features section -->
+   <section id="features" class="pt-12 bg-gray-50 dark:bg-darkBlue1">
+    <!-- features container -->
+    <div class="container mx-auto px-6 pb-32">
+
+        <!-- first row -->
+        <div class="flex flex-col space-y-24 text-center md:flex-row md:space-y-0">
+
+            <!-- item 1 -->
+            <div class="flex flex-col items-center space-y-2 md:w-1/2">
+                <div class="flex items-center justify-center h-24 mb-6">
+                    <img src="images/icon-access-anywhere.svg" alt="">
+                </div>
+                <h3 class="text-xl font-bold">Access your file from anywhere</h3>
+                <p class="max-w-md">
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. 
+                </p>
+            </div>
+
+               <!-- item 2 -->
+            <div class="flex flex-col items-center space-y-2 md:w-1/2">
+                <div class="flex items-center justify-center h-24 mb-6">
+                    <img src="images/icon-security.svg" alt="">
+                </div>
+                <h3 class="text-xl font-bold">Access your file from anywhere</h3>
+                <p class="max-w-md">
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. 
+                </p>
+            </div>
+
+        </div>
+
+            <!-- second row -->
+            <div class="flex flex-col space-y-24 mt-28 text-center md:flex-row md:space-y-0">
+
+                <!-- item 3 -->
+                <div class="flex flex-col items-center space-y-2 md:w-1/2">
+                    <div class="flex items-center justify-center h-24 mb-6">
+                        <img src="images/icon-collaboration.svg" alt="">
+                    </div>
+                    <h3 class="text-xl font-bold">Access your file from anywhere</h3>
+                    <p class="max-w-md">
+                        Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. 
+                    </p>
+                </div>
+    
+                   <!-- item 4 -->
+                <div class="flex flex-col items-center space-y-2 md:w-1/2">
+                    <div class="flex items-center justify-center h-24 mb-6">
+                        <img src="images/icon-any-file.svg" alt="">
+                    </div>
+                    <h3 class="text-xl font-bold">Access your file from anywhere</h3>
+                    <p class="max-w-md">
+                        Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. 
+                    </p>
+                </div>
+            </div>
+            </div>
+   </section>
+
+   <!-- productive section -->
+   <section id="productive" class="bg-white dark:bg-darkBlue">
+    <!-- productive container -->
+    <div class="container flex flex-col items-center mx-auto px-6 pt-24 pb-32 md:flex-row md:space-x-16">
+
+        <!-- image -->
+        <div class="md:w-1/2">
+            <img src="images/illustration-stay-productive.png" alt="" class="mb-10">
+        </div>
+
+        <!-- content -->
+        <div class="flex flex-col items-start md:w-1/2">
+            <div class="flex flex-col space-y-5">
+                <div class="max-w-md text-xl font-bold md:text-4xl">
+                    <h4 class="max-w-md text-xl font-bold md:text-4xl">
+                        Stay productive, wherever you are
+                    </h4>
+                    <p class="text-md md:text-lg">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. </p><br>
+                    <p class="text-md md:text-lg">Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups. </p>
+                </div>
+
+                <!-- link -->
+                <div class="block mt-4">
+                    <a href="#" class="border-b border-accentCyan text-accentCyan">
+                        See you more
+                        <img src="images/icon-arrow.svg" alt="" class="inline pb-2">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+   </section>
 </body>
 </html>
