--- a/index.html
+++ b/index.html
@@ -164,5 +164,94 @@
         </div>
     </div>
    </section>
+
+   <!-- testimonials section -->
+   <section id="testimonials" class="bg-gray-50 dark:bg-darkBlue">
+    <!-- testimonials container -->
+    <div class="container mx-auto px-6 pt-12 pb-80 md:pb-96">
+        <!-- boxes container -->
+        <div class="relative flex flex-col w-full space-y-6 md:flex-row md:space-y-0 md:space-x-12">
+            <!-- images -->
+            <img src="images/bg-quotes.png" alt="" class="absolute left-1 -top-2 w-10 md:-top-16 md:w-20">
+
+            <!-- box 1 -->
+            <div class="flex flex-col p-10 space-y-6 rounded-lg bg-gray-100 dark:bg-darkBlue3 md:w-1/3">
+                <p class="text-sm leading-5 md:text-lg">
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                </p>
+                <!-- customer info -->
+                <div class="flex space-x-4">
+                    <img src="images/profile-1.jpg" alt="" class="w-10 h-10 rounded-full">
+                    <div>
+                        <h5 class="text-sm font-semibold">
+                            Lorem Ipsum
+                        </h5>
+                        <p class="text-xs font-extralight">
+                            Founder & CEO
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- box 2 -->
+            <div class="flex flex-col p-10 space-y-6 rounded-lg bg-gray-100 dark:bg-darkBlue3 md:w-1/3">
+                <p class="text-sm leading-5 md:text-lg">
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                </p>
+                <!-- customer info -->
+                <div class="flex space-x-4">
+                    <img src="images/profile-2.jpg" alt="" class="w-10 h-10 rounded-full">
+                    <div>
+                        <h5 class="text-sm font-semibold">
+                            Lorem Ipsum
+                        </h5>
+                        <p class="text-xs font-extralight">
+                            Founder & CEO
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- box 3 -->
+            <div class="flex flex-col p-10 space-y-6 rounded-lg bg-gray-100 dark:bg-darkBlue3 md:w-1/3">
+                <p class="text-sm leading-5 md:text-lg">
+                    Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+                </p>
+                <!-- customer info -->
+                <div class="flex space-x-4">
+                    <img src="images/profile-3.jpg" alt="" class="w-10 h-10 rounded-full">
+                    <div>
+                        <h5 class="text-sm font-semibold">
+                            Lorem Ipsum
+                        </h5>
+                        <p class="text-xs font-extralight">
+                            Founder & CEO
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+   </section>
+
+   <!-- early access section -->
+   <section id="early-access" class="relative px-6 dark:bg-darkBlue2 md:px-0">
+        <div class="relative -top-40 max-w-4xl mx-auto p-10 px-6 space-y-6 text-center rounded-lg bg-gray-200 dark:bg-darkBlue1 md:px-16">
+            <h5 class="text-2xl font-bold">Get early access today</h5>
+            <p class="text-sm">
+                Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for previewing layouts and visual mockups.
+            </p>
+
+            <!-- input -->
+            <div class="flex flex-col items-start space-y-6 md:flex-row md:space-y-0 md:space-x-6">
+                <div class="w-full md:flex-1">
+                    <input type="text" class="w-full px-10 py-3 rounded-full focus:outline-none" placeholder="exemple@gmail.com">
+                </div>
+                <button class="w-full p-3 px-6 rounded-full bg-accentCyan md:w-56 hover:scale-95">
+                    get Started for Free
+                </button>
+            </div>
+        </div>
+   </section>
 </body>
 </html>
